# mcp3fm

./: .replit  check_port.py  config.py  data_processing.py  default.nix  directory_structure.txt  init_db.py  main.py  predict.py  pyproject.toml  replit.nix  requirements.txt  run.py  socket  training_data.json
app/: __init__.py  bcrypt.py  compat.py  forms.py  models.py  utils.py
app/routes/: auth.py  main.py  plugins.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  customize.html  home.html  login.html  profile.html  rate.html  register.html  upload.html
generated_mods/EssentialsX/: mod.json
generated_mods/EssentialsX/src/main/java/essentialsx/: Main.java
generated_mods/EssentialsX/src/main/java/essentialsx/commands/: GiveCommand.java  HealCommand.java  TpCommand.java
generated_mods/EssentialsX/src/main/resources/: essentialsx.mixins.json
migrations/: alembic.ini
mod_generation/: train_model.py
spigot_api/: PluginParser.java
