[tool.poetry]
name = "mcp3fm"
version = "0.1.0"
description = "A sample Flask project"
authors = ["Ocean_Man"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
Flask-Migrate = "^3.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-SocketIO = "^5.1.1"
gunicorn = "^20.1.0"
eventlet = "^0.32.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
