[tool.poetry]
name = "mcp3fm"
version = "0.1.0"
description = "IDEK"
authors = ["Ocean_Man"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "==2.0.1"
Flask-Login = "==0.5.0"
Flask-WTF = "==0.15.1"
Flask-Bcrypt = "==0.7.1"
Flask-SQLAlchemy = "==2.5.1"
python-dotenv = "==0.17.1"
Jinja2 = "==3.0.1"
MarkupSafe = "==2.0.1"
Werkzeug = "==2.0.1"
SQLAlchemy = "==1.4.22"
email-validator = "==1.1.3"
matplotlib = "==3.4.2"
ipython = "==7.24.1"
sphinx = "==4.0.2"
html5lib = "==1.1"

[tool.poetry.dev-dependencies]
pytest = "==6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
